--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@nestjs/common": "^9.0.0",
         "@nestjs/core": "^9.0.0",
         "@nestjs/platform-express": "^9.0.0",
+        "@prisma/client": "^4.11.0",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.2.0"
     },
@@ -45,6 +46,7 @@
         "jest": "29.3.1",
         "lint-staged": "^13.2.0",
         "prettier": "^2.3.2",
+        "prisma": "^4.11.0",
         "source-map-support": "^0.5.20",
         "supertest": "^6.1.3",
         "ts-jest": "29.0.3",
