--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
         "test:watch": "jest --watch",
         "test:cov": "jest --coverage",
         "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-        "test:e2e": "jest --config ./test/jest-e2e.json",
+        "test:e2e": "jest --config ./test/e2e/jest-e2e.json",
+        "test:e2e:cov": "yarn test:e2e --coverage",
+        "test:migration": "jest --config ./test/migration/jest-migration.json",
+        "test:migration:update": "yarn test:migration -u",
+        "test:migration:cov": "yarn test:migration --coverage",
         "postinstall": "husky install"
     },
     "dependencies": {
