--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@nestjs/core": "^9.0.0",
         "@nestjs/mapped-types": "*",
         "@nestjs/platform-express": "^9.0.0",
+        "@nestjs/swagger": "^6.3.0",
         "@prisma/client": "^4.11.0",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
