--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "start:debug": "nest start --debug --watch",
         "start:prod": "node dist/main",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+        "generate-client-sdk": "ts-node scripts/generate-client-sdk",
         "test": "jest",
         "test:watch": "jest --watch",
         "test:cov": "jest --coverage",
@@ -55,6 +56,7 @@
         "husky": "^8.0.3",
         "jest": "29.3.1",
         "lint-staged": "^13.2.0",
+        "openapi-typescript-codegen": "^0.23.0",
         "prettier": "^2.3.2",
         "prisma": "^4.11.0",
         "source-map-support": "^0.5.20",
@@ -70,6 +72,7 @@
         "*.{ts,js}": [
             "prettier --write",
             "eslint --fix"
-        ]
+        ],
+        "*": "yarn generate-client-sdk"
     }
 }
