Remove .env and add .env.local

--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
     "scripts": {
         "build": "nest build",
         "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+        "dev-env": "dotenv -e .env -e .env.local",
         "start": "nest start",
-        "start:dev": "nest start --watch",
+        "start:dev": "yarn dev-env nest start --watch",
         "start:debug": "nest start --debug --watch",
         "start:prod": "node dist/main",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-        "test": "jest",
-        "test:watch": "jest --watch",
-        "test:cov": "jest --coverage",
-        "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-        "test:e2e": "jest --config ./test/e2e/jest-e2e.json",
-        "test:e2e:cov": "yarn test:e2e --coverage",
-        "test:migration": "jest --config ./test/migration/jest-migration.json",
+        "test": "yarn dev-env jest",
+        "test:watch": "yarn test -- --watch",
+        "test:cov": "yarn test -- jest --coverage",
+        "test:debug": "yarn dev-env node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+        "test:e2e": "yarn test -- --config ./test/e2e/jest-e2e.json",
+        "test:e2e:cov": "yarn test:e2e -- --coverage",
+        "test:migration": "yarn test -- --config ./test/migration/jest-migration.json",
         "test:migration:update": "yarn test:migration -u",
         "test:migration:cov": "yarn test:migration --coverage",
         "postinstall": "husky install",
@@ -49,6 +50,7 @@
         "@types/supertest": "^2.0.11",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
         "@typescript-eslint/parser": "^5.0.0",
+        "dotenv-cli": "^7.2.1",
         "eslint": "^8.0.1",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-prettier": "^4.0.0",
