--- a/package.json
+++ b/package.json
@@ -7,13 +7,11 @@
     "license": "UNLICENSED",
     "packageManager": "yarn@3.4.1",
     "scripts": {
-        "build": "nest build",
+        "build": "nest build --webpack",
+        "deploy": "yarn build && cross-env NODE_ENV=production serverless deploy",
         "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
         "dev-env": "dotenv -e .env -e .env.local",
-        "start": "nest start",
-        "start:dev": "yarn dev-env nest start --watch",
-        "start:debug": "nest start --debug --watch",
-        "start:prod": "node dist/main",
+        "start": "yarn build && cross-env NODE_ENV=development serverless offline",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
         "test": "yarn dev-env jest",
         "test:watch": "yarn test -- --watch",
@@ -29,38 +27,46 @@
         "prisma:studio": "prisma studio"
     },
     "dependencies": {
-        "@nestjs/common": "^9.0.0",
-        "@nestjs/core": "^9.0.0",
-        "@nestjs/mapped-types": "*",
-        "@nestjs/platform-express": "^9.0.0",
+        "@nestjs/common": "^9.4.0",
+        "@nestjs/core": "^9.4.0",
+        "@nestjs/mapped-types": "^1.2.2",
+        "@nestjs/platform-express": "^9.4.0",
         "@nestjs/swagger": "^6.3.0",
         "@prisma/client": "^4.11.0",
+        "@vendia/serverless-express": "^4.10.1",
+        "aws-lambda": "^1.0.7",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.2.0"
     },
     "devDependencies": {
-        "@nestjs/cli": "^9.0.0",
-        "@nestjs/schematics": "^9.0.0",
-        "@nestjs/testing": "^9.0.0",
+        "@nestjs/cli": "^9.3.0",
+        "@nestjs/schematics": "^9.1.0",
+        "@nestjs/testing": "^9.4.0",
+        "@types/aws-lambda": "^8.10.114",
         "@types/express": "^4.17.13",
         "@types/jest": "29.2.4",
-        "@types/node": "18.11.18",
-        "@types/supertest": "^2.0.11",
-        "@typescript-eslint/eslint-plugin": "^5.0.0",
-        "@typescript-eslint/parser": "^5.0.0",
+        "@types/node": "^18.15.11",
+        "@types/supertest": "^2.0.12",
+        "@typescript-eslint/eslint-plugin": "^5.57.1",
+        "@typescript-eslint/parser": "^5.57.1",
+        "copy-webpack-plugin": "^11.0.0",
+        "cross-env": "^7.0.3",
         "dotenv-cli": "^7.2.1",
-        "eslint": "^8.0.1",
+        "eslint": "^8.38.0",
         "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-prettier": "^4.2.1",
         "husky": "^8.0.3",
         "jest": "29.3.1",
         "lint-staged": "^13.2.0",
         "prettier": "^2.3.2",
         "prisma": "^4.11.0",
+        "serverless": "^3.30.1",
+        "serverless-offline": "^12.0.4",
         "source-map-support": "^0.5.20",
         "supertest": "^6.1.3",
+        "terser-webpack-plugin": "^5.3.7",
         "ts-jest": "29.0.3",
         "ts-loader": "^9.2.3",
         "ts-node": "^10.0.0",
