Use dev-env in start script

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
         "build": "nest build --webpack",
         "deploy": "yarn build && cross-env NODE_ENV=production serverless deploy",
         "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-        "dev-env": "dotenv -e .env -e .env.local",
-        "start": "yarn build && cross-env NODE_ENV=development serverless offline",
+        "dev-env": "dotenv -e .env -e .env.local cross-env NODE_ENV=development",
+        "start": "yarn build && yarn dev-env serverless offline",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
         "test": "yarn dev-env jest",
         "test:watch": "yarn test -- --watch",
