--- a/package.json
+++ b/package.json
@@ -10,16 +10,14 @@
         "build": "nest build --webpack",
         "deploy": "yarn build && cross-env NODE_ENV=production serverless deploy",
         "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-        "dev-env": "dotenv -e .env -e .env.local cross-env NODE_ENV=development",
-        "start": "yarn build && yarn dev-env serverless offline",
+        "start": "yarn build && cross-env NODE_ENV=development serverless offline",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-        "test": "yarn dev-env jest",
-        "test:watch": "yarn test -- --watch",
-        "test:cov": "yarn test -- jest --coverage",
-        "test:debug": "yarn dev-env node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-        "test:e2e": "yarn test -- --config ./test/e2e/jest-e2e.json",
+        "test:watch": "jest --watch",
+        "test:cov": "jest --coverage",
+        "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+        "test:e2e": "jest --config ./test/e2e/jest-e2e.json",
         "test:e2e:cov": "yarn test:e2e -- --coverage",
-        "test:migration": "yarn test -- --config ./test/migration/jest-migration.json",
+        "test:migration": "jest --config ./test/migration/jest-migration.json",
         "test:migration:update": "yarn test:migration -u",
         "test:migration:cov": "yarn test:migration --coverage",
         "postinstall": "husky install",
@@ -28,6 +26,7 @@
     },
     "dependencies": {
         "@nestjs/common": "^9.4.0",
+        "@nestjs/config": "^2.3.1",
         "@nestjs/core": "^9.4.0",
         "@nestjs/mapped-types": "^1.2.2",
         "@nestjs/platform-express": "^9.4.0",
@@ -53,7 +52,6 @@
         "@typescript-eslint/parser": "^5.57.1",
         "copy-webpack-plugin": "^11.0.0",
         "cross-env": "^7.0.3",
-        "dotenv-cli": "^7.2.1",
         "eslint": "^8.38.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-prettier": "^4.2.1",
